--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -128,7 +128,7 @@
     align-items: center;
     padding: 0;
     padding-left: 8px;
-    src: url("/src/assets/fonts/Greenscr.ttf") format("truetype");
+    src: url("/assets/fonts/Greenscr.ttf") format("truetype");
     letter-spacing: 2px;
     padding-right: 60px;
     height: 40px;
