--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "SpyFont";  /* You can name it whatever you like */
-  src: url("/src/assets/fonts/Greenscr.ttf") format("truetype");
+  src: url("/assets/fonts/Greenscr.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
