--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -106,16 +106,17 @@
     position: relative;
     z-index: 2;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
    
 
 }
 .buttons{
-    position: absolute;
-    bottom: 4px;
-    left: 4px;
  
     display: flex;
     gap: 16px;
+    margin-top: 12px;
 }
 .clasified{
     text-decoration: underline;
@@ -214,7 +215,7 @@
         margin: 0;
         width: 90vw;
         height: 100%;
-        padding-bottom: 40px;
+        padding-bottom: 12px;
 
     }
 
